# Introduccion-a-la-Geodinamica

./: README.md  pyproject.toml
material_del_curso/: elementos_de_programacion.ipynb  primer_programa.py  taller-elemental-programacion-python.ipynb  taller_express_pandas.ipynb  taller_python_sintaxis.ipynb
