[project]
name = "taller-elemental-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4.7",
    "matplotlib>=3.10.6",
    "mypy>=1.17.1",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "ruff>=0.12.12",
    "scipy>=1.16.1",
]
